# WatermarkableCamera

./: .clang-format  LICENSE  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
app/: .gitignore  build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: tex.frag  tex.spv  tex.vert
app/src/main/cpp/: CMakeLists.txt  CameraUtils.cpp  CameraUtils.hpp  FindVulkanHpp.cmake  Util.hpp  camera_engine.cpp  camera_engine.hpp  camera_listeners.cpp  camera_main.cpp  camera_manager.cpp  camera_manager.hpp  camera_utils.cpp  camera_utils.hpp  hellovk.cpp  hellovk.h  hellovk.hpp  image_reader.cpp  image_reader.hpp  main.cpp  native_debug.hpp  util.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp
app/src/main/cpp/shaders/: tex.slang
app/src/main/java/com/gmail/tiomamaster/watermarkablecamera/: CameraActivity.kt  GlCameraActivity.kt  KRecordableSurfaceView.kt  MainActivity.kt  RecordableSurfaceView.java  Renderer.kt  Resolution.kt  VideoRenderer.java  VkCameraActivity.kt  VulkanActivity.kt  WatermarkView.kt
app/src/main/res/layout/: activity_camera.xml  activity_camera_gl.xml  activity_camera_vk.xml  activity_main.xml  activity_vulkan.xml  item_spinner_quality.xml  watermark.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
